--- a/app/index.jade
+++ b/app/index.jade
@@ -10,8 +10,24 @@ html
       img.logo(src="/images/Weebly-Logo.png")
 
     .sidebar
-      .header
-        | Templates
+      .header TEMPLATES
+
+      .templates-container
+        .btn-page.btn-selected page
+        .btn-page.btn-add
+          input(type='text', placeholder='ADD NEW PAGE')
+
+      .header ELEMENTS
+      .elements
+        .element-container
+        .element-container
+        .element-container
+        .element-container
+      .cf
+
+      .header SETTINGS
+
+
 
     // build:js vendor.js
     // bower:js
