Added the elements icons.

--- a/app/app.scss
+++ b/app/app.scss
@@ -3,7 +3,7 @@
 @import 'styles/normalize';
 @import 'styles/fonts';
 @import 'styles/sidebar';
-
+@import 'styles/sprites';
 
 html, body {
   margin: 0;
