--- a/app/index.jade
+++ b/app/index.jade
@@ -20,14 +20,20 @@ html
       .header ELEMENTS
       .elements
         .element-container
+          .element-icons.title-icon
+          h1 TITLE
         .element-container
+          .element-icons.text-icon
+          h1 TEXT
         .element-container
+          .element-icons.image-icon
+          h1 IMAGE
         .element-container
+          .element-icons.nav-icon
+          h1 NAV
       .cf
 
       .header SETTINGS
-
-
 
     // build:js vendor.js
     // bower:js
