Show button icons on hover.

--- a/app/index.jade
+++ b/app/index.jade
@@ -11,10 +11,12 @@ html
 
     .sidebar
       .header TEMPLATES
-
       .templates-container
         .btn-page.btn-selected page
-        .btn-page.btn-add
+          .edit-icons.light-remove-icon
+          .edit-icons.light-edit-icon
+        .btn-page-add
+          .edit-icons.light-add-icon
           input(type='text', placeholder='ADD NEW PAGE')
 
       .header ELEMENTS
