--- a/app/styles/_button.scss
+++ b/app/styles/_button.scss
@@ -1,16 +1,20 @@
 .btn {
-  padding: 6px 12px;
-  margin-bottom: 0;
   font-size: 14px;
-  font-weight: normal;
-  text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   background-image: none;
-  border: 0px solid transparent;
   border-radius: 5px;
+  position: relative;
+  width: 100%;
+  height: 40px;
+  padding: 10px 10px;
+  text-align: initial;
+  border: 2px solid rgba(0, 0, 0, 0);
+  font-weight: bold;
+  color: #FFF;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
-
 
 @mixin btn-variant($color) {
   background-color: $color;
