--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -27,22 +27,14 @@ $sidebar-header-color: #8BA3BE;
     margin: 20px auto;
   }
 
-  .btn-page {
+  .btn-page-add {
     @extend .btn;
-    width: 100%;
-    height: 40px;
-    padding: 10px 10px;
-    text-align: initial;
-    border: 2px solid rgba(0, 0, 0, 0);
-    font-weight: bold;
-    color: #FFF;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-  }
-
-  .btn-add {
     background-color: inherit;
     border-color: $sidebar-header-background-color;
+
+    > div {
+      float: right;
+    }
 
     input {
       width: 100%;
@@ -56,8 +48,24 @@ $sidebar-header-color: #8BA3BE;
     }
   }
 
+  .btn-page {
+    @extend .btn;
+
+    > div {
+      display: none;
+    }
+
+    &:hover {
+      > div {
+        display: inline;
+        float: right;
+        margin-left: 5px;
+      }
+    }
+  }
+
   .btn-selected {
-    @include btn-variant($sidebar-header-background-color);
+    @include btn-variant(#4278BE);
   }
 
   .btn-default {
@@ -94,8 +102,4 @@ $sidebar-header-color: #8BA3BE;
       }
     }
   }
-}
-
-.cf {
-  @include clearfix;
 }
